main window is now a child window to keep splitter sizes in minimized view

--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -1,22 +1,22 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-09"}=Neu
-{s:"Remove",t:"2025-12-09"}=Löschen
-{s:"Detect",t:"2025-12-09"}=Erkennen
-New=Neu
-Now=Jetzt
-{s:"Stop",t:"2025-12-09"}=Stopp
-Play=Spielen
-Analyze=Analyse
-Auto=Auto
-Invert=Drehen
-Time=Zeit
-Setup=Setup
-More=Mehr
-Config=Konfig
-Swap=Tausch
-Restart=Neustart
-Log=Log
+{s:"Add",t:"2025-12-10"}=Neu
+{s:"Remove",t:"2025-12-10"}=Löschen
+{s:"Detect",t:"2025-12-10"}=Erkennen
+{s:"New",t:"2025-12-10"}=Neu
+{s:"Now",t:"2025-12-10"}=Jetzt
+{s:"Stop",t:"2025-12-10"}=Stopp
+{s:"Play",t:"2025-12-10"}=Spielen
+{s:"Analyze",t:"2025-12-10"}=Analyse
+{s:"Auto",t:"2025-12-10"}=Auto
+{s:"Invert",t:"2025-12-10"}=Drehen
+{s:"Time",t:"2025-12-10"}=Zeit
+{s:"Setup",t:"2025-12-10"}=Setup
+{s:"More",t:"2025-12-10"}=Mehr
+{s:"Config",t:"2025-12-10"}=Konfig
+{s:"Swap",t:"2025-12-10"}=Tausch
+{s:"Restart",t:"2025-12-10"}=Neustart
+{s:"Log",t:"2025-12-10"}=Log
 {s:"Run",t:"2025-12-09"}=Start
 {s:"Clear",t:"2025-12-09"}=Reset
 {s:"Grace",t:"2025-12-09"}=Sanft
@@ -29,7 +29,7 @@ Log=Log
 {s:"Continue",t:"2025-12-09"}=Weiter
 Ok=OK
 Copy=Kopieren
-Paste=Einfügen
+{s:"Paste",t:"2025-12-10"}=Einfügen
 {s:"Cancel",t:"2025-12-09"}=Abbrechen
 {s:"RGC",t:"2025-12-09"}=RGC
 {s:"Browse",t:"2025-12-09"}=Durchsuchen
@@ -73,12 +73,12 @@ Switch to SPRT tournament View=Zu SPRT Turnieransicht wechseln
 Yes, continue SPRT tournament=Ja, SPRT Turnier fortsetzen
 Stop Tutorial=Lernprogramm stoppen
 Close=Schließen
-{s:"Turnier",t:"2025-12-09"}=Turnier
-{s:"SPRT Turnier",t:"2025-12-09"}=SPRT Turnier
-{s:"EPD Analyse",t:"2025-12-09"}=EPD Analyse
-{s:"Lernprogramm",t:"2025-12-09"}=Lernprogramm
-{s:"Sprache wählen",t:"2025-12-09"}=Sprache wählen
-{s:"Nachrichten",t:"2025-12-09"}=Nachrichten
+{s:"Turnier",t:"2025-12-10"}=Turnier
+{s:"SPRT Turnier",t:"2025-12-10"}=SPRT Turnier
+{s:"EPD Analyse",t:"2025-12-10"}=EPD Analyse
+{s:"Lernprogramm",t:"2025-12-10"}=Lernprogramm
+{s:"Sprache wählen",t:"2025-12-10"}=Sprache wählen
+{s:"Nachrichten",t:"2025-12-10"}=Nachrichten
 EPD=EPD
 Epd=Epd
 More...=More...
@@ -380,7 +380,7 @@ Stop tournament gracefully after current games finish=Turnier sanft stoppen, nac
 Continue tournament with current configuration=Turnier mit aktueller Konfiguration fortsetzen
 All engine instance communication is logged to a single file=All engine instance communication is logged to a single file
 Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.=Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.
-Clear all tournament data and results=Clear all tournament data and results
+{s:"Clear all tournament data and results",t:"2025-12-09"}=Clear all tournament data and results
 {s:"Number of games running in parallel",t:"2025-12-09"}=Number of games running in parallel
 Add this engine to tournament selection=Add this engine to tournament selection
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine
@@ -430,16 +430,16 @@ Chess engine communication protocol (UCI or XBoard)=Chess engine communication p
 
 [Translation]
 id=Table
-Depth=Tiefe
-Time=Zeit
-Eval=Bewertung
-PV=PV
-Move=Zug
-Nodes=Knoten
-NPS=NPS
-Tb hits=TB
-Value=Wert
-Primary variant=Hauptvariante
+{s:"Depth",t:"2025-12-10"}=Tiefe
+{s:"Time",t:"2025-12-10"}=Zeit
+{s:"Eval",t:"2025-12-10"}=Bewertung
+{s:"PV",t:"2025-12-10"}=PV
+{s:"Move",t:"2025-12-10"}=Zug
+{s:"Nodes",t:"2025-12-10"}=Knoten
+{s:"NPS",t:"2025-12-10"}=NPS
+{s:"Tb hits",t:"2025-12-10"}=TB
+{s:"Value",t:"2025-12-10"}=Wert
+{s:"Primary variant",t:"2025-12-10"}=Hauptvariante
 {s:"Name",t:"2025-12-09"}=Name
 {s:"Elo",t:"2025-12-09"}=Elo
 {s:"Error",t:"2025-12-09"}=Fehler
@@ -476,26 +476,26 @@ Qapla \1.\2.=Qapla \1.\2.
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-09"}=Engines
-{s:"Tournament",t:"2025-12-09"}=Turnier
+{s:"Engines",t:"2025-12-10"}=Engines
+{s:"Tournament",t:"2025-12-10"}=Turnier
 Sprt=Sprt
-{s:"Pgn",t:"2025-12-09"}=Pgn
-{s:"Epd",t:"2025-12-09"}=Epd
-{s:"Test",t:"2025-12-09"}=Test
-{s:"Settings",t:"2025-12-09"}=Einstellungen
-{s:"Board",t:"2025-12-09"}=Brett
-{s:"Chatbot",t:"2025-12-09"}=Chatbot
-{s:"SPRT",t:"2025-12-09"}=SPRT
+{s:"Pgn",t:"2025-12-10"}=Pgn
+{s:"Epd",t:"2025-12-10"}=Epd
+{s:"Test",t:"2025-12-10"}=Test
+{s:"Settings",t:"2025-12-10"}=Einstellungen
+{s:"Board",t:"2025-12-10"}=Brett
+{s:"Chatbot",t:"2025-12-10"}=Chatbot
+{s:"SPRT",t:"2025-12-10"}=SPRT
 
 [Translation]
 id=Chatbot
-{s:"Tournament",t:"2025-12-09"}=Turnier
-{s:"How can I help you?",t:"2025-12-09"}=Wie kann ich Ihnen helfen?
-{s:"SPRT Tournament",t:"2025-12-09"}=SPRT Turnier
-{s:"Tutorial",t:"2025-12-09"}=Lernprogramm
-{s:"Choose Language",t:"2025-12-09"}=Sprache wählen
-{s:"Messages",t:"2025-12-09"}=Nachrichten
-{s:"EPD Analysis",t:"2025-12-09"}=EPD Analyse
+{s:"Tournament",t:"2025-12-10"}=Turnier
+{s:"How can I help you?",t:"2025-12-10"}=Wie kann ich Ihnen helfen?
+{s:"SPRT Tournament",t:"2025-12-10"}=SPRT Turnier
+{s:"Tutorial",t:"2025-12-10"}=Lernprogramm
+{s:"Choose Language",t:"2025-12-10"}=Sprache wählen
+{s:"Messages",t:"2025-12-10"}=Nachrichten
+{s:"EPD Analysis",t:"2025-12-10"}=EPD Analyse
 
 [Translation]
 id=Text
