--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -1,22 +1,22 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-09"}=Add
-{s:"Remove",t:"2025-12-09"}=Remove
-{s:"Detect",t:"2025-12-09"}=Detect
-New=New
-Now=Now
-{s:"Stop",t:"2025-12-09"}=Stop
-Play=Play
-Analyze=Analyze
-Auto=Auto
-Invert=Flip
-Time=Time
-Setup=Setup
-More=More
-Config=Config
-Swap=Swap
-Restart=Restart
-Log=Log
+{s:"Add",t:"2025-12-10"}=Add
+{s:"Remove",t:"2025-12-10"}=Remove
+{s:"Detect",t:"2025-12-10"}=Detect
+{s:"New",t:"2025-12-10"}=New
+{s:"Now",t:"2025-12-10"}=Now
+{s:"Stop",t:"2025-12-10"}=Stop
+{s:"Play",t:"2025-12-10"}=Play
+{s:"Analyze",t:"2025-12-10"}=Analyze
+{s:"Auto",t:"2025-12-10"}=Auto
+{s:"Invert",t:"2025-12-10"}=Flip
+{s:"Time",t:"2025-12-10"}=Time
+{s:"Setup",t:"2025-12-10"}=Setup
+{s:"More",t:"2025-12-10"}=More
+{s:"Config",t:"2025-12-10"}=Config
+{s:"Swap",t:"2025-12-10"}=Swap
+{s:"Restart",t:"2025-12-10"}=Restart
+{s:"Log",t:"2025-12-10"}=Log
 {s:"Run",t:"2025-12-09"}=Run
 {s:"Clear",t:"2025-12-09"}=Clear
 {s:"Grace",t:"2025-12-09"}=Grace
@@ -29,7 +29,7 @@ Log=Log
 {s:"Continue",t:"2025-12-09"}=Continue
 Ok=Ok
 Copy=Copy
-Paste=Paste
+{s:"Paste",t:"2025-12-10"}=Paste
 {s:"Cancel",t:"2025-12-09"}=Cancel
 {s:"RGC",t:"2025-12-09"}=RGC
 {s:"Browse",t:"2025-12-09"}=Browse
@@ -73,12 +73,12 @@ Switch to SPRT tournament View=Switch to SPRT tournament View
 Yes, continue SPRT tournament=Yes, continue SPRT tournament
 Stop Tutorial=Stop Tutorial
 Close=Close
-{s:"Turnier",t:"2025-12-09"}=Turnier
-{s:"SPRT Turnier",t:"2025-12-09"}=SPRT Turnier
-{s:"EPD Analyse",t:"2025-12-09"}=EPD Analyse
-{s:"Lernprogramm",t:"2025-12-09"}=Lernprogramm
-{s:"Sprache wählen",t:"2025-12-09"}=Sprache wählen
-{s:"Nachrichten",t:"2025-12-09"}=Nachrichten
+{s:"Turnier",t:"2025-12-10"}=Turnier
+{s:"SPRT Turnier",t:"2025-12-10"}=SPRT Turnier
+{s:"EPD Analyse",t:"2025-12-10"}=EPD Analyse
+{s:"Lernprogramm",t:"2025-12-10"}=Lernprogramm
+{s:"Sprache wählen",t:"2025-12-10"}=Sprache wählen
+{s:"Nachrichten",t:"2025-12-10"}=Nachrichten
 EPD=EPD
 Epd=Epd
 More...=More...
@@ -331,16 +331,16 @@ No new engines found.=No new engines found.
 
 [Translation]
 id=Table
-Depth=Depth
-Time=Time
-Eval=Eval
-PV=PV
-Move=Move
-Nodes=Nodes
-NPS=NPS
-Tb hits=Tb
-Value=Value
-Primary variant=Primary variant
+{s:"Depth",t:"2025-12-10"}=Depth
+{s:"Time",t:"2025-12-10"}=Time
+{s:"Eval",t:"2025-12-10"}=Eval
+{s:"PV",t:"2025-12-10"}=PV
+{s:"Move",t:"2025-12-10"}=Move
+{s:"Nodes",t:"2025-12-10"}=Nodes
+{s:"NPS",t:"2025-12-10"}=NPS
+{s:"Tb hits",t:"2025-12-10"}=Tb
+{s:"Value",t:"2025-12-10"}=Value
+{s:"Primary variant",t:"2025-12-10"}=Primary variant
 {s:"Name",t:"2025-12-09"}=Name
 {s:"Elo",t:"2025-12-09"}=Elo
 {s:"Error",t:"2025-12-09"}=Error
@@ -380,7 +380,7 @@ Qapla \1.\2.=Qapla \1.\2.
 [Translation]
 id=Tooltip
 Add this engine to tournament selection=Add this engine to tournament selection
-Clear all tournament data and results=Clear all tournament data and results
+{s:"Clear all tournament data and results",t:"2025-12-09"}=Clear all tournament data and results
 {s:"Number of games running in parallel",t:"2025-12-09"}=Number of games running in parallel
 {s:"Tournament progress: games played / total games",t:"2025-12-09"}=Tournament progress: games played / total games
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine
@@ -501,26 +501,26 @@ Chess engine communication protocol (UCI or XBoard)=Chess engine communication p
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-09"}=Engines
-{s:"Tournament",t:"2025-12-09"}=Tournament
+{s:"Engines",t:"2025-12-10"}=Engines
+{s:"Tournament",t:"2025-12-10"}=Tournament
 Sprt=Sprt
-{s:"Pgn",t:"2025-12-09"}=Pgn
-{s:"Epd",t:"2025-12-09"}=Epd
-{s:"Test",t:"2025-12-09"}=Test
-{s:"Settings",t:"2025-12-09"}=Settings
-{s:"Board",t:"2025-12-09"}=Board
-{s:"Chatbot",t:"2025-12-09"}=Chatbot
-{s:"SPRT",t:"2025-12-09"}=SPRT
+{s:"Pgn",t:"2025-12-10"}=Pgn
+{s:"Epd",t:"2025-12-10"}=Epd
+{s:"Test",t:"2025-12-10"}=Test
+{s:"Settings",t:"2025-12-10"}=Settings
+{s:"Board",t:"2025-12-10"}=Board
+{s:"Chatbot",t:"2025-12-10"}=Chatbot
+{s:"SPRT",t:"2025-12-10"}=SPRT
 
 [Translation]
 id=Chatbot
-{s:"Tournament",t:"2025-12-09"}=Tournament
-{s:"How can I help you?",t:"2025-12-09"}=How can I help you?
-{s:"SPRT Tournament",t:"2025-12-09"}=SPRT Tournament
-{s:"Tutorial",t:"2025-12-09"}=Tutorial
-{s:"Choose Language",t:"2025-12-09"}=Choose Language
-{s:"Messages",t:"2025-12-09"}=Messages
-{s:"EPD Analysis",t:"2025-12-09"}=EPD Analysis
+{s:"Tournament",t:"2025-12-10"}=Tournament
+{s:"How can I help you?",t:"2025-12-10"}=How can I help you?
+{s:"SPRT Tournament",t:"2025-12-10"}=SPRT Tournament
+{s:"Tutorial",t:"2025-12-10"}=Tutorial
+{s:"Choose Language",t:"2025-12-10"}=Choose Language
+{s:"Messages",t:"2025-12-10"}=Messages
+{s:"EPD Analysis",t:"2025-12-10"}=EPD Analysis
 
 [Translation]
 id=Text
