--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -1,22 +1,22 @@
 [Translation]
 id=Button
-{s:"Add",t:"2025-12-09"}=Ajouter
-{s:"Remove",t:"2025-12-09"}=Retirer
-{s:"Detect",t:"2025-12-09"}=Detecter
-New=Nouveau
-Now=Maint
-{s:"Stop",t:"2025-12-09"}=Arret
-Play=Jouer
-Analyze=Analyser
-Auto=Auto
-Invert=Inverser
-Time=Temps
-Setup=Config
-More=Plus
-Config=Config
-Swap=Echanger
-Restart=Rel.
-Log=Journal
+{s:"Add",t:"2025-12-10"}=Ajouter
+{s:"Remove",t:"2025-12-10"}=Retirer
+{s:"Detect",t:"2025-12-10"}=Detecter
+{s:"New",t:"2025-12-10"}=Nouveau
+{s:"Now",t:"2025-12-10"}=Maint
+{s:"Stop",t:"2025-12-10"}=Arret
+{s:"Play",t:"2025-12-10"}=Jouer
+{s:"Analyze",t:"2025-12-10"}=Analyser
+{s:"Auto",t:"2025-12-10"}=Auto
+{s:"Invert",t:"2025-12-10"}=Inverser
+{s:"Time",t:"2025-12-10"}=Temps
+{s:"Setup",t:"2025-12-10"}=Config
+{s:"More",t:"2025-12-10"}=Plus
+{s:"Config",t:"2025-12-10"}=Config
+{s:"Swap",t:"2025-12-10"}=Echanger
+{s:"Restart",t:"2025-12-10"}=Rel.
+{s:"Log",t:"2025-12-10"}=Journal
 {s:"Run",t:"2025-12-09"}=Executer
 {s:"Clear",t:"2025-12-09"}=Réinit.
 {s:"Grace",t:"2025-12-09"}=Doux
@@ -29,7 +29,7 @@ Log=Journal
 {s:"Continue",t:"2025-12-09"}=Suite
 Ok=OK
 Copy=Copier
-Paste=Coller
+{s:"Paste",t:"2025-12-10"}=Coller
 {s:"Cancel",t:"2025-12-09"}=Annuler
 {s:"RGC",t:"2025-12-09"}=RGC
 {s:"Browse",t:"2025-12-09"}=Parcourir
@@ -73,12 +73,12 @@ Switch to SPRT tournament View=Switch to SPRT tournament View
 Yes, continue SPRT tournament=Yes, continue SPRT tournament
 Stop Tutorial=Stop Tutorial
 Close=Close
-{s:"Turnier",t:"2025-12-09"}=Turnier
-{s:"SPRT Turnier",t:"2025-12-09"}=SPRT Turnier
-{s:"EPD Analyse",t:"2025-12-09"}=EPD Analyse
-{s:"Lernprogramm",t:"2025-12-09"}=Lernprogramm
-{s:"Sprache wählen",t:"2025-12-09"}=Sprache wählen
-{s:"Nachrichten",t:"2025-12-09"}=Nachrichten
+{s:"Turnier",t:"2025-12-10"}=Turnier
+{s:"SPRT Turnier",t:"2025-12-10"}=SPRT Turnier
+{s:"EPD Analyse",t:"2025-12-10"}=EPD Analyse
+{s:"Lernprogramm",t:"2025-12-10"}=Lernprogramm
+{s:"Sprache wählen",t:"2025-12-10"}=Sprache wählen
+{s:"Nachrichten",t:"2025-12-10"}=Nachrichten
 EPD=EPD
 Epd=Epd
 More...=More...
@@ -275,16 +275,16 @@ No new engines found.=No new engines found.
 
 [Translation]
 id=Table
-Depth=Profondeur
-Time=Temps
-Eval=Évaluation
-PV=PV
-Move=Coup
-Nodes=Nœuds
-NPS=NPS
-Tb hits=TB
-Value=Valeur
-Primary variant=Variante principale
+{s:"Depth",t:"2025-12-10"}=Profondeur
+{s:"Time",t:"2025-12-10"}=Temps
+{s:"Eval",t:"2025-12-10"}=Évaluation
+{s:"PV",t:"2025-12-10"}=PV
+{s:"Move",t:"2025-12-10"}=Coup
+{s:"Nodes",t:"2025-12-10"}=Nœuds
+{s:"NPS",t:"2025-12-10"}=NPS
+{s:"Tb hits",t:"2025-12-10"}=TB
+{s:"Value",t:"2025-12-10"}=Valeur
+{s:"Primary variant",t:"2025-12-10"}=Variante principale
 {s:"Name",t:"2025-12-09"}=Nom
 {s:"Elo",t:"2025-12-09"}=Elo
 {s:"Error",t:"2025-12-09"}=Erreur
@@ -392,7 +392,7 @@ Stop tournament gracefully after current games finish=Stop tournament gracefully
 Continue tournament with current configuration=Continue tournament with current configuration
 All engine instance communication is logged to a single file=All engine instance communication is logged to a single file
 Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.=Übersetzung ist derzeit in Arbeit. Nur wenige Teile sind übersetzt.
-Clear all tournament data and results=Clear all tournament data and results
+{s:"Clear all tournament data and results",t:"2025-12-09"}=Clear all tournament data and results
 {s:"Number of games running in parallel",t:"2025-12-09"}=Number of games running in parallel
 Add this engine to tournament selection=Add this engine to tournament selection
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine
@@ -442,26 +442,26 @@ Chess engine communication protocol (UCI or XBoard)=Chess engine communication p
 
 [Translation]
 id=Tab
-{s:"Engines",t:"2025-12-09"}=Moteurs
-{s:"Tournament",t:"2025-12-09"}=Tournoi
+{s:"Engines",t:"2025-12-10"}=Moteurs
+{s:"Tournament",t:"2025-12-10"}=Tournoi
 Sprt=Sprt
-{s:"Pgn",t:"2025-12-09"}=Pgn
-{s:"Epd",t:"2025-12-09"}=Epd
-{s:"Test",t:"2025-12-09"}=Test
-{s:"Settings",t:"2025-12-09"}=Paramètres
-{s:"Board",t:"2025-12-09"}=Échiquier
-{s:"Chatbot",t:"2025-12-09"}=Chatbot
-{s:"SPRT",t:"2025-12-09"}=SPRT
+{s:"Pgn",t:"2025-12-10"}=Pgn
+{s:"Epd",t:"2025-12-10"}=Epd
+{s:"Test",t:"2025-12-10"}=Test
+{s:"Settings",t:"2025-12-10"}=Paramètres
+{s:"Board",t:"2025-12-10"}=Échiquier
+{s:"Chatbot",t:"2025-12-10"}=Chatbot
+{s:"SPRT",t:"2025-12-10"}=SPRT
 
 [Translation]
 id=Chatbot
-{s:"Tournament",t:"2025-12-09"}=Tournament
-{s:"How can I help you?",t:"2025-12-09"}=How can I help you?
-{s:"SPRT Tournament",t:"2025-12-09"}=SPRT Tournament
-{s:"Tutorial",t:"2025-12-09"}=Tutorial
-{s:"Choose Language",t:"2025-12-09"}=Choose Language
-{s:"Messages",t:"2025-12-09"}=Messages
-{s:"EPD Analysis",t:"2025-12-09"}=EPD Analysis
+{s:"Tournament",t:"2025-12-10"}=Tournament
+{s:"How can I help you?",t:"2025-12-10"}=How can I help you?
+{s:"SPRT Tournament",t:"2025-12-10"}=SPRT Tournament
+{s:"Tutorial",t:"2025-12-10"}=Tutorial
+{s:"Choose Language",t:"2025-12-10"}=Choose Language
+{s:"Messages",t:"2025-12-10"}=Messages
+{s:"EPD Analysis",t:"2025-12-10"}=EPD Analysis
 
 [Translation]
 id=Text
