--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -364,7 +364,7 @@ Resets all tutorials to their initial state=Setzt alle Lernprogramme auf ihren A
 Edit value and click Apply to save changes=Wert bearbeiten und auf Übernehmen klicken, um Änderungen zu speichern
 Start new tournament with current configuration=Neues Turnier mit aktueller Konfiguration starten
 {s:"Remove selected engine from configuration",t:"2025-12-09"}=Ausgewählte Engine aus der Konfiguration entfernen
-{s:"Auto-detect engine capabilities and supported options",t:"2025-12-09"}=Engine-Fähigkeiten und unterstützte Optionen automatisch erkennen
+{s:"Auto-detect engine capabilities and supported options",t:"2025-12-10"}=Engine-Fähigkeiten und unterstützte Optionen automatisch erkennen
 {s:"Save tournament configuration and results to file",t:"2025-12-09"}=Turnier-Konfiguration und -Ergebnisse in Datei speichern
 {s:"Load tournament configuration and results from file",t:"2025-12-09"}=Turnier-Konfiguration und -Ergebnisse aus Datei laden
 {s:"Stop tournament immediately, aborting running games",t:"2025-12-09"}=Turnier sofort stoppen, laufende Spiele abbrechen
@@ -396,9 +396,9 @@ Clear all EPD analysis results=Clear all EPD analysis results
 Maximum plies to play from PGN opening before engines take over.\nOnly applicable for PGN input.\n  all - Play full PGN sequence\n  \1 - Engines start from PGN start position\n  N - Play N plies, then engines continue=Maximum plies to play from PGN opening before engines take over.\nOnly applicable for PGN input.\n  all - Play full PGN sequence\n  \1 - Engines start from PGN start position\n  N - Play N plies, then engines continue
 Disable automatic color swap after each game=Disable automatic color swap after each game
 Average Elo level for scaling rating output=Average Elo level for scaling rating output
-{s:"Select option: Nachrichten",t:"2025-12-09"}=Select option: Nachrichten
+{s:"Select option: Nachrichten",t:"2025-12-10"}=Select option: Nachrichten
 {s:"Select option: Sprache wählen",t:"2025-12-09"}=Select option: Sprache wählen
-{s:"Select option: Turnier",t:"2025-12-09"}=Select option: Turnier
+{s:"Select option: Turnier",t:"2025-12-10"}=Select option: Turnier
 {s:"Resume the existing tournament and continue scheduled tasks.",t:"2025-12-09"}=Resume the existing tournament and continue scheduled tasks.
 Do not continue the existing tournament; return to the menu.=Do not continue the existing tournament; return to the menu.
 Save the current tournament to a file so you can load it later.=Save the current tournament to a file so you can load it later.
@@ -409,7 +409,7 @@ Automatically detect engine capabilities (options) now and continue.=Automatical
 Skip automatic engine detection and continue without detected capabilities. Use this only if detection fails.=Skip automatic engine detection and continue without detected capabilities. Use this only if detection fails.
 {s:"Start the tournament now with the specified concurrency and engine settings.",t:"2025-12-09"}=Start the tournament now with the specified concurrency and engine settings.
 {s:"Switch to the tournament view to inspect running games and progress.",t:"2025-12-09"}=Switch to the tournament view to inspect running games and progress.
-{s:"Select option: SPRT Turnier",t:"2025-12-09"}=Select option: SPRT Turnier
+{s:"Select option: SPRT Turnier",t:"2025-12-10"}=Select option: SPRT Turnier
 Close the message window and return to the previous view.=Close the message window and return to the previous view.
 Remain in the chatbot interface. You can switch to tournament view later via the tabs.=Remain in the chatbot interface. You can switch to tournament view later via the tabs.
 End the currently running tournament and stop all games. Progress will be saved to the PGN if configured.=End the currently running tournament and stop all games. Progress will be saved to the PGN if configured.
@@ -427,6 +427,7 @@ Chess engine communication protocol (UCI or XBoard)=Chess engine communication p
 {h:"41121b47",s:"End the currently running tournament and stop all ",t:"2025-12-09"}=End the currently running tournament and stop all games. Progress will be saved to the PGN if configured.
 {h:"2f481d1c",s:"Open a detailed HTML report with full tournament r",t:"2025-12-09"}=Open a detailed HTML report with full tournament results table in your default browser.
 {s:"View the current tournament results.",t:"2025-12-09"}=View the current tournament results.
+{s:"Make the engine play for the current side",t:"2025-12-10"}=Make the engine play for the current side
 
 [Translation]
 id=Table
