--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -57,9 +57,9 @@ Copy FEN=FEN kopieren
 {s:"Switch to Tournament View",t:"2025-12-09"}=Zu Turnieransicht wechseln
 {s:"Stay in Chatbot",t:"2025-12-09"}=Im Chatbot bleiben
 {s:"Less Options",t:"2025-12-14"}=Weniger Optionen
-{s:"New SPRT tournament",t:"2025-12-11"}=Neues SPRT Turnier
-{s:"Save SPRT tournament",t:"2025-12-11"}=SPRT Turnier speichern
-{s:"Load SPRT tournament",t:"2025-12-11"}=SPRT Turnier laden
+{s:"New SPRT tournament",t:"2025-12-14"}=Neues SPRT Turnier
+{s:"Save SPRT tournament",t:"2025-12-14"}=SPRT Turnier speichern
+{s:"Load SPRT tournament",t:"2025-12-14"}=SPRT Turnier laden
 {s:"EPD Analysis",t:"2025-12-14"}=EPD Analyse
 Yes, stop analysis=Ja, Analyse stoppen
 {s:"Start Analysis",t:"2025-12-14"}=Analyse starten
@@ -306,7 +306,6 @@ Epd analysis started=EPD Analyse gestartet
 All tests have been completed. Clear data before re-analyzing.=Alle Tests wurden abgeschlossen. Daten vor erneuter Analyse löschen.
 {s:"Analysis stopped",t:"2025-12-14"}=Analyse gestoppt
 Analysis stopped.\nFinishing ongoing calculations.=Analyse gestoppt.\nLaufende Berechnungen werden beendet.
-Welcome to the EPD Analysis Tutorial!\n\nEPD (Extended Position Description) Analyse ermöglicht es Ihnen zu testen, wie gut Schach-Engines taktische Stellungen lösen. Dies unterscheidet sich von Turnieren – anstatt komplette Partien zu spielen, analysieren Engines vordefinierte Stellungen und versuchen, den richtigen Zug oder die korrekte Bewertung zu finden.\n\nEPD-Dateien enthalten Stellungen mit erwarteten Lösungen. Engines erhalten Punkte, wenn sie den korrekten Zug innerhalb des Zeitlimits finden. Das hilft Ihnen:\n• die taktische Stärke verschiedener Engines zu bewerten\n• Engines für bestimmte Stellungstypen (Taktiken, Endspiele, etc.) zu testen\n• die Analysequalität statt der Spielstärke zu vergleichen\n\nUm Sie durch den Prozess zu führen, markieren wir bei Bedarf relevante Schaltflächen mit einem roten Punkt.\n\nLos geht's! Klicken Sie auf die 'EPD'-Registerkarte im linken Fenster, um die Analysekonfiguration zu öffnen.
 {s:"Tournament stopped",t:"2025-12-14"}=Tournament stopped
 Great! The EPD Analysis window is now open.=Super! Das EPD-Analysefenster ist jetzt geöffnet.
 Engines selected! Let's configure the analysis parameters.=Engines ausgewählt! Konfigurieren wir die Analyseparameter.
@@ -425,7 +424,7 @@ Average Elo level for scaling rating output=Average Elo level for scaling rating
 {s:"Select option: Turnier",t:"2025-12-14"}=Select option: Turnier
 {s:"Resume the existing tournament and continue scheduled tasks.",t:"2025-12-14"}=Resume the existing tournament and continue scheduled tasks.
 {s:"Do not continue the existing tournament; return to the menu.",t:"2025-12-11"}=Do not continue the existing tournament; return to the menu.
-{s:"Save the current tournament to a file so you can load it later.",t:"2025-12-11"}=Save the current tournament to a file so you can load it later.
+{s:"Save the current tournament to a file so you can load it later.",t:"2025-12-14"}=Save the current tournament to a file so you can load it later.
 Create a new tournament. The currently loaded tournament will be discarded unless you save it first.=Create a new tournament. The currently loaded tournament will be discarded unless you save it first.
 Show or hide advanced global engine settings, such as traces and restart behavior.=Show or hide advanced global engine settings, such as traces and restart behavior.
 {s:"Open a file dialog to add one or more engine binaries to the engine list.",t:"2025-12-14"}=Open a file dialog to add one or more engine binaries to the engine list.
@@ -452,7 +451,7 @@ Load a previously saved tournament from disk and replace the current tournament.
 {h:"2f481d1c",s:"Open a detailed HTML report with full tournament r",t:"2025-12-09"}=Open a detailed HTML report with full tournament results table in your default browser.
 {s:"View the current tournament results.",t:"2025-12-09"}=View the current tournament results.
 {s:"Make the engine play for the current side",t:"2025-12-14"}=Make the engine play for the current side
-{h:"587c143b",s:"Create a new tournament. The currently loaded tour",t:"2025-12-11"}=Create a new tournament. The currently loaded tournament will be discarded unless you save it first.
+{h:"587c143b",s:"Create a new tournament. The currently loaded tour",t:"2025-12-14"}=Create a new tournament. The currently loaded tournament will be discarded unless you save it first.
 {h:"5f117fbc",s:"Time control format: seconds+increment (e.g., '\\1.",t:"2025-12-14"}=Time control format: seconds+increment (e.g., '\1.\2+\3.\4' for \5s + \6.\7s/move)
 {h:"aceeef03",s:"Quick selection for common time controls.\nSelectin",t:"2025-12-12"}=Quick selection for common time controls.\nSelecting an option automatically fills the input fields above.\nExample: '\1.\2+\3.\4' sets Seconds\5\6, Increment Ms\7
 {h:"e20d96bd",s:"Lower Elo bound (H\\1): null hypothesis threshold f",t:"2025-12-11"}=Lower Elo bound (H\1): null hypothesis threshold for SPRT test.\nIf true Elo difference is below this, H\2 is accepted (no improvement).
@@ -472,7 +471,7 @@ Load a previously saved tournament from disk and replace the current tournament.
 {s:"Select option: SPRT Tournament",t:"2025-12-14"}=Select option: SPRT Tournament
 {s:"Select option: Messages",t:"2025-12-14"}=Select option: Messages
 {s:"Select option: Tutorial",t:"2025-12-14"}=Select option: Tutorial
-{h:"34293611",s:"Load a previously saved tournament from disk and r",t:"2025-12-11"}=Load a previously saved tournament from disk and replace the current tournament.
+{h:"34293611",s:"Load a previously saved tournament from disk and r",t:"2025-12-14"}=Load a previously saved tournament from disk and replace the current tournament.
 {s:"Select option: Choose Language",t:"2025-12-14"}=Select option: Choose Language
 {s:"Select directory for log files",t:"2025-12-11"}=Select directory for log files
 {h:"d7516611",s:"When a new opening position is selected:\n  default",t:"2025-12-11"}=When a new opening position is selected:\n  default - Fresh sequence per round, reused across pairings\n  encounter - New opening per engine pair (colors don't matter)\n  round - Same opening for all games in the round
@@ -506,6 +505,7 @@ Load a previously saved tournament from disk and replace the current tournament.
 {h:"6c61366c",s:"Tournament type:\n  gauntlet - One engine plays aga",t:"2025-12-14"}=Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine
 {s:"Number of games per pairing.\nTotal games \\1 games × rounds",t:"2025-12-14"}=Number of games per pairing.\nTotal games \1 games × rounds
 {h:"21ecd6b3",s:"Number of consecutive games played per opening.\nCo",t:"2025-12-14"}=Number of consecutive games played per opening.\nCommonly set to \1 to alternate colors with the same line
+{s:"Select option: Français",t:"2025-12-14"}=Select option: Français
 
 [Translation]
 id=Table
@@ -584,7 +584,7 @@ id=Chatbot
 
 [Translation]
 id=Text
-{s:"What would you like to do?",t:"2025-12-11"}=Was möchten Sie tun?
+{s:"What would you like to do?",t:"2025-12-14"}=Was möchten Sie tun?
 Starting a new SPRT tournament will delete the existing one.\nSave the current SPRT tournament to a file if you want to keep it.=Das Starten eines neuen SPRT-Turniers wird das bestehende löschen.\nSpeichern Sie das aktuelle SPRT-Turnier in eine Datei, wenn Sie es behalten möchten.
 Nothing to clear.=Nichts zu löschen.
 You can configure global engine settings such as hash size and time control here. These settings will apply to all engines participating in the tournament.=Sie können globale Engine-Einstellungen wie Hash-Größe und Zeitkontrolle hier konfigurieren. Diese Einstellungen gelten für alle Engines, die am Turnier teilnehmen.
@@ -652,7 +652,6 @@ Now configure the time control - how much time each engine gets.\n\nIn the 'Time
 {s:"Time control configured!",t:"2025-12-14"}=Time control configured!
 Now set where to save the games. In the 'PGN' section:\n• Click on 'Pgn file' and choose a location and filename\n\nAll games will be saved in PGN (Portable Game Notation) format - the standard format for chess games. You can later open these files in any chess software to review the games, analyze with engines, or share them.\n\nHover over other PGN options to see what additional information can be saved.=Now set where to save the games. In the 'PGN' section:\n• Click on 'Pgn file' and choose a location and filename\n\nAll games will be saved in PGN (Portable Game Notation) format - the standard format for chess games. You can later open these files in any chess software to review the games, analyze with engines, or share them.\n\nHover over other PGN options to see what additional information can be saved.
 {s:"PGN output configured!",t:"2025-12-14"}=PGN output configured!
-One last setting before we start: Concurrency.\n• Set 'Concurrency' to \1 at the top of the window\n\nConcurrency determines how many games run simultaneously. With \2 concurrent games, the tournament finishes \3× faster. You may want to configure one less concurrent games than your CPU has physical cores to avoid overload. If your CPU supports hyperthreading, divide the number of shown cores by two to get the number of physical cores.\n\nDuring the tournament, you'll see \4 board tabs appear - one for each running game. You can click on any tab to watch that game live. You can also click a line in the running games table to jump to that game's board tab.
 {h:"ff380363",s:"Click the 'Run' button (play icon) in the toolbar ",t:"2025-12-14"}=Click the 'Run' button (play icon) in the toolbar to begin the tournament.\n\nOnce running:\n• The input controls will hide to save space\n• You'll see the progress bar fill up\n• Board tabs will appear for each concurrent game\n• The running games table will show active and completed games\n• The results table will update in real-time sorted by the calculated elo of each engine\n• The third table shows game termination causes statistics, it supports sorting and searching\n\nYou can click 'Grace' (same button) to stop gracefully after current games finish, or 'Stop' to abort immediately.
 {h:"d01745d7",s:"Watch the progress bar and click on any board tab ",t:"2025-12-14"}=Watch the progress bar and click on any board tab to see a live game. The engines are now playing against each other with your configured settings.\n\nWhile you wait, notice:\n• The crosstable showing results as they come in\nWait for all games to complete...
 {h:"3abbe672",s:"Your results are automatically saved, but let's al",t:"2025-12-14"}=Your results are automatically saved, but let's also save manually to learn the process.\n\nClick the 'Save As' button (disk icon) in the toolbar.\n\nThe .qtour file format saves everything:\n• All engine configurations\n• Tournament settings\n• Complete results and statistics\n• Scheduling information for continuation\n\nYou can load this file later to use the same settings for another tournament, extend or reduce the tournament by adding or removing engines, rounds or games per round or continue the tournament.
@@ -660,4 +659,27 @@ One last setting before we start: Concurrency.\n• Set 'Concurrency' to \1 at t
 {h:"e73facb6",s:"The tournament now includes additional pairings fo",t:"2025-12-14"}=The tournament now includes additional pairings for the new engine. The button has changed to 'Continue' because there are pending games.\n\nClick 'Continue' (same button as Run) to resume the tournament.\n\nThis continue feature is also useful if you:\n• Stopped the tournament and want to resume\n• Changed settings and want to play remaining games\n• Loaded a saved tournament
 {h:"45754732",s:"The new games are being played. Only the pairings ",t:"2025-12-14"}=The new games are being played. Only the pairings involving the new engine are scheduled - previous results remain intact.\n\nLet it finish, or click 'Stop' if you want to end early.\n\nTip: You can stop gracefully with 'Grace' - current games finish normally, no new games start. This preserves all game results.
 {h:"c92bcab6",s:"You've learned the essentials of running engine to",t:"2025-12-14"}=You've learned the essentials of running engine tournaments:\n\n• Configure global settings for fair conditions\n• Select and compare multiple engines\n• Set up openings, time controls, and output\n• Run tournaments with parallel games\n• Save, load, and extend tournaments\n\nExplore the Adjudication settings to auto-end drawn or won games early. Try different tournament types like 'gauntlet' where one engine plays all others.\n\nHappy testing!
+{h:"36593829",s:"Thank you! Your language has been set. You can now",t:"2025-12-14"}=Thank you! Your language has been set. You can now continue using the application.
+{h:"2f07bc6f",s:"Starting a new SPRT tournament will delete the exi",t:"2025-12-14"}=Starting a new SPRT tournament will delete the existing one.\nSave the current SPRT tournament to a file if you want to keep it.
+
+[Translation]
+id=TextButton
+{s:"Tournament",t:"2025-12-14"}=Tournament
+{s:"SPRT Tournament",t:"2025-12-14"}=SPRT Tournament
+{s:"EPD Analysis",t:"2025-12-14"}=EPD Analysis
+{s:"Board",t:"2025-12-14"}=Board
+{s:"Tutorial",t:"2025-12-14"}=Tutorial
+{s:"Choose Language",t:"2025-12-14"}=Choose Language
+{s:"Messages",t:"2025-12-14"}=Messages
+{s:"Deutsch",t:"2025-12-14"}=Deutsch
+{s:"English",t:"2025-12-14"}=English
+{s:"Français",t:"2025-12-14"}=Français
+{s:"Turnier",t:"2025-12-14"}=Turnier
+{s:"SPRT Turnier",t:"2025-12-14"}=SPRT Turnier
+{s:"EPD Analyse",t:"2025-12-14"}=EPD Analyse
+{s:"Lernprogramm",t:"2025-12-14"}=Lernprogramm
+{s:"Sprache wählen",t:"2025-12-14"}=Sprache wählen
+{s:"Nachrichten",t:"2025-12-14"}=Nachrichten
+{s:"Add Engines",t:"2025-12-14"}=Add Engines
+{s:"Cancel",t:"2025-12-14"}=Cancel
 
